tests/error/errors_on_usage/if_expr_cond_type_change.err
Error: Different types (at $FILE:8:8)
  | 
6 |     y = 4
7 |     0 if (y := x) else (y := 6)
8 |     z = y
  |         ^ Variable `y` may refer to different types
  | 
7 |     0 if (y := x) else (y := 6)
  |           - This is of type `bool`
  | 
7 |     0 if (y := x) else (y := 6)
  |                         - This is of type `int`

Guppy compilation failed due to 1 previous error
